--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,2 +1,12 @@
 FROM nginx:alpine
 COPY default.conf /etc/nginx/conf.d/default.conf
+
+# Create non-root user and adjust permissions
+RUN addgroup -S nginx-user && adduser -S nginx-user -G nginx-user && \
+    chown -R nginx-user:nginx-user /var/cache/nginx && \
+    chown -R nginx-user:nginx-user /var/log/nginx && \
+    chown -R nginx-user:nginx-user /etc/nginx/conf.d && \
+    touch /var/run/nginx.pid && \
+    chown -R nginx-user:nginx-user /var/run/nginx.pid
+
+USER nginx-user
